<resources>
    <string name="app_name">DieOrDie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_greeting_name">Регистратура</string>
    <string name="slogan">Будьте здоровы!</string>
    <string name="login_button_text">Войти</string>
    <string name="registration_button_text">Зарегистрироваться</string>
    <string name="email_input_label_text">Электронная почта:</string>
    <string name="password_label_text">Пароль:</string>
    <string name="password_confirm_label_text">Подтверждение пароля</string>

    <string-array name="specializations">
        <item>Терапевт</item>
        <item>Педиатр</item>
        <item>Логопед</item>
        <item>Хирург</item>
        <item>Окулист</item>
        <item>Невролог</item>
        <item>Психолог</item>
        <item>Кардиолог</item>
        <item>Онколог</item>
        <item>Уролог</item>

    </string-array>


</resources>