<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    tools:context=".views.fragments.RegistrationFragment">

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:layout_margin="8sp"
        android:text="@string/email_input_label_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_input_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_view"
        android:layout_margin="8sp"
        android:ems="22"
        android:fontFamily="casual"
        android:hint="Введите электронную почту"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_view" />

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="20sp"
        android:text="@string/password_label_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_edit_text" />

    <EditText
        android:id="@+id/password_input_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_view"
        android:layout_margin="8sp"
        android:ems="22"
        android:hint="Введите пароль"
        android:fontFamily="casual"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text_view" />

    <TextView
        android:id="@+id/password_confirm_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="20sp"
        android:fontFamily="serif"
        android:text="@string/password_confirm_label_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_edit_text" />

    <EditText
        android:id="@+id/password_confirm_input_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:background="@drawable/rounded_text_view"
        android:hint="Повторите пароль"
        android:ems="22"
        android:fontFamily="casual"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm_text_view" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_button_text"
        app:cornerRadius="20sp"
        android:textColor="@color/black"
        app:backgroundTint="@color/secondary_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>